--- a/tests/test_cases/2017/commands/DA26.226001|fc=1.yaml
+++ b/tests/test_cases/2017/commands/DA26.226001|fc=1.yaml
@@ -48,6 +48,22 @@ test_cases:
     18DAF1602800005555555555
     18DAF16010396270298FFC00
 - expected_values:
+    HONDA_TP_FL: 213
+    HONDA_TP_FR: 214
+    HONDA_TP_RL: 214
+    HONDA_TP_RR: 207
+  response: |-
+    18DAF126103B6260010000FF
+    18DAF1262100F000000000D6
+    18DAF1262200D500CF00D600
+    18DAF1262300000000000000
+    18DAF126241B191918000000
+    18DAF1262500000000000000
+    18DAF1262600000000000000
+    18DAF1262700000000000000
+    18DAF1262800000000555555
+    18DAF1602500000000000000
+- expected_values:
     HONDA_TP_FL: 218
     HONDA_TP_FR: 224
     HONDA_TP_RL: 218
