--- a/tests/test_cases/2017/commands/DA26.226001|fc=1.yaml
+++ b/tests/test_cases/2017/commands/DA26.226001|fc=1.yaml
@@ -1,6 +1,22 @@
 command_id: DA26.226001|fc=1
 test_cases:
 - expected_values:
+    HONDA_TP_FL: 205
+    HONDA_TP_FR: 203
+    HONDA_TP_RL: 205
+    HONDA_TP_RR: 196
+  response: |-
+    18DAF11E2500000000005555
+    18DAF126103B6260010000FF
+    18DAF1262100F000000000CB
+    18DAF1262200CD00C400CD00
+    18DAF1262300000000000000
+    18DAF1262416171414000000
+    18DAF1262500000000000000
+    18DAF1262600000000000000
+    18DAF1262700000000000000
+    18DAF1262800000000555555
+- expected_values:
     HONDA_TP_FL: 194
     HONDA_TP_FR: 194
     HONDA_TP_RL: 196
@@ -18,14 +34,14 @@ test_cases:
 - expected_values:
     HONDA_TP_FL: 206
     HONDA_TP_FR: 207
-    HONDA_TP_RL: 207
-    HONDA_TP_RR: 200
+    HONDA_TP_RL: 205
+    HONDA_TP_RR: 198
   response: |-
     18DAF126103B6260010000FF
     18DAF1262100F000000000CF
-    18DAF1262200CE00C800CF00
+    18DAF1262200CE00C600CD00
     18DAF1262300000000000000
-    18DAF1262417161514000000
+    18DAF1262418181413000000
     18DAF1262500000000000000
     18DAF1262600000000000000
     18DAF1262700000000000000
